--- a/14.html
+++ b/14.html
@@ -10,7 +10,77 @@
 </head>
 <body>
     <div class="content">
-
+        Руководителем считается лицо, направляющее и координирующее дея- тельность исполнителей, которые обязаны ему подчиняться и в установленных рамках выполнять все его требования. Основная задача руководителя – это ор- ганизация выполнения работы силами подчиненных.<br>
+        Работа современного руководителя сводится к выполнению ряда функций, среди которых:<br>
+        1. стратегическая – заключается в постановке целей, разработке стратегии и планировании;<br>
+        2. экспертно-инновационная – в процессе ее реализации руководитель орга- низует работу над созданием и внедрением новых видов продукции и услуг.<br>
+        3. административная, включающая ряд подфункций:<br>
+        - контрольную – оценка результатов деятельности и проведение необходи- мой корректировки;<br>
+        - организационную – распределение среди исполнителей полномочий, за- дач и ресурсов;<br>
+        - координационную – организация взаимодействия работников;<br>
+        - кадровую – подбор, обучение и развитие персонала;<br>
+        - стимулирующую – воздействие на поведение исполнителей, их поощре- ние и наказание.<br>
+        4. коммуникационная – проведение совещаний и переговоров, прием посе- тителей, распространение информации и т.д.<br>
+        5. социальная – создание благоприятного морально- психологического кли- мата в коллективе, поддержание традиций и норм поведения, оказание помощи подчиненным и т.д. <br>
+        <br>
+        Официальные права и обязанности руководителей регламентируются уста- вом организации, положениями о ней или о структурных подразделениях.<br>
+        <br>
+        Неофициальные обязанности руководителей по отношению к подчинен- ным состоят в справедливом и уважительном отношении к работникам, заботе об их проблемах, оказании им необходимой помощи.<br>
+        <br>
+        В зависимости от уровня в управленческой иерархии условно выделяют руководителей высшего, среднего и низового звена. Они отличаются друг от друга набором функций и возможностей.<br>
+        <br>
+        К высшему звену относятся руководители организации и их заместители. Они определяют миссию, цели, политику и основные стандарты деятельности фирмы, ее структуру и систему управления.<br>
+        <br>
+        Руководители среднего звена – основных подразделений – назначаются и освобождаются от должности первым лицом или его заместителями и несут пе- ред ними ответственность за выполнение полученных заданий и сохранность доверенного им имущества. Они устанавливают задания низовым руководите- лям, осуществляют контроль, занимаются организацией процесса производства, совершенствованием условий труда, следят за соблюдением трудовой дисцип- лины, частично решают кадровые вопросы.<br>
+        <br>
+        Низовой уровень управления – технический – обеспечивает нормальное осуществление технологических процессов и стабильную работу персонала. Низовые руководители работают непосредственно с исполнителями. Они рас- пределяют задания, разрабатывают графики работы, организуют и координи- руют труд подчиненных, обеспечивают условия выполнения производственных заданий, контролируют соблюдение их сроков и рациональность использования оборудования.<br>
+        <br>
+        Требования к качествам руководителя и их взаимосвязь с уровнем организационной иерархии<br>
+        <br>
+        Главная задача любого руководителя заключается в управлении человече- ским поведением, так как любые производственные процессы осуществляются через взаимодействие людей в объекте управления. Руководитель должен на- править это взаимодействие в нужную организации сторону.<br>
+        <br>
+        Требования к профессиональной компетенции руководителей можно ус- ловно разделить на три группы:<br>
+        1. Знания и умения, помогающие выполнять профессиональную работу по управлению:<br>
+        · умение обосновывать и принимать решения в ситуациях, для которых ха- рактерны высокая динамичность и неопределенность;<br>
+        · информированность по вопросам развития отрасли, в которой работает предприятие: состояние исследований, техники, технологии, конкуренции, ди- намики спроса на продукцию;<br>
+        · способность управлять ресурсами, прогнозировать и планировать работу предприятия, владение способами повышения эффективности управления;<br>
+        · умение использовать современную информационную технологию, сред- ства коммуникации и связи;<br>
+        · умение, решая оперативные вопросы, на 1 место ставить перспективные вопросы развития.<br>
+        2. Способности к работе с людьми:<br>
+        · обязательность в двух аспектах: 1) по отношению к подчиненным; 2) по отношению к коллегам по руководящей деятельности;<br>
+        · правильный подход к обучению подчиненных (задание на грани возмож- ностей подчиненных);<br>
+        · строгость и требовательность;<br>
+        · высокое чувство долга и преданность делу;<br>
+        · честность в отношениях с людьми и доверие к партнерам;<br>
+        · умение четко выражать свои мысли и убеждать;<br>
+        · адекватность поощрения и наказания;<br>
+        · строгость и требовательность;<br>
+        · уважительное отношение к людям вне зависимости от их положения в ор- ганизационной иерархии.<br>
+        3. Личные качества и способность к самоменеджменту:<br>
+        · поисковая активность, т.е. нацеленность на решение возникающих про- блем.<br>
+        · целеустремленность и решительность, умение показать эти качества под- чиненным. И обязательное соблюдение принципа – отдавать приказы только от своего имени.<br>
+        · умение беречь время (свое и подчиненных).<br>
+        · способность к риску;<br>
+        · предпринимательские способности;<br>
+        · высокая работоспособность;<br>
+        · способность к эмпатии;<br>
+        · профессиональная интуиция;<br>
+        · умение владеть собой;<br>
+        · организаторские способности;<br>
+        · энергичность и воля.<br>
+        <br>
+        Также одним из важнейших качеств руководителя является умение прини- мать нестандартные решения в стандартных ситуациях, что часто позволяет до- стичь желаемых результатов с минимальными усилиями и с большей эффек- тивностью.<br>
+        <br>
+        Кроме того, руководителю необходимо быть знакомым с основными лич- ными проблемами непосредственных подчиненных и знать их человеческие ка- чества. Первое необходимо, чтобы в меру своих возможностей оказывать им помощь в решении этих проблем, а второе, чтобы более правильно строить свою кадровую политику.<br>
+        <br>
+        Необходимо отметить, что на разных уровнях организационной иерархии к руководителям будут предъявляться разные требования. Хотя общий набор личных и профессиональных качеств может быть и одинаковым, в приоритете будут разные его составляющие. Так, для руководителей высшего эшелона са- мыми важными качествами будут: способность предвидеть и прогнозировать перспективы развития компании, и, в связи с этим, хорошо развитая интуиция (что является немаловажным моментом при решении проблем с низкой инфор- мационной обеспеченностью); для руководителей среднего звена более важны- ми будут организационные навыки и умение сплачивать подчиненных, а для низовых руководителей на первом месте будут технологические навыки и уме- ние работать с людьми.<br>
+        <br>
+        При этом, по мнению американского гуру менеджмента Ицхака Адизеса, идеального руководителя — супер-босса, который может всё, не существует. Это невозможно потому, что такой «идеальный» человек должен сочетать не- сочетаемые, по мнению И. Адизеса, качества. Его книга «Корпоративные про- цессы: как организации растут и умирают и что с этим делать?» считается клас- сическим пособием в теории управления.<br>
+        <br>
+        Таким образом, во главе компании должен быть не супер-босс, а группа супер-боссов, каждый из которых отлично выполняет одну из четырёх ролей и на нормальном уровне имеет представление об остальных.<br>
+         <br>
+        <br>
+        
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
