--- a/9.html
+++ b/9.html
@@ -10,7 +10,40 @@
 </head>
 <body>
     <div class="content">
-
+        Коммуникации в управлении<br>
+        <br>
+        Коммуникации — это обмен информацией между двумя людьми и более. Информация служит средством (орудием) труда, а коммуникация связующим процессом управления (наряду с управленческими решениями), поскольку связывает функции планирования, организации, мотивации и контроля.<br>
+        На основе коммуникации менеджер получает информацию, необходимую для принятия решения и доводит принятое решение до работников организации.<br>
+        <br>
+        Эффективностью коммуникаций часто определяют качество решений.<br>
+        <br>
+        Информация может быть классифицирована по аспектам управления. <br>
+        По этому признаку выделяют экономическую, организационную, социальную, техническую информацию. <br>
+        По характеру предоставления информацию можно подразделить на визуальную, аудио- и аудиовизуальную. Разнообразие форм отражения информации имеет большое значение в информационном обеспечении управления. <br>
+        По возможности продуктивного использования можно выделить информацию полезную, ложную и избыточную. Существует также множество других признаков, по которым может быть проведена классификация информации.<br>
+        Коммуникации или обмен информацией может проходить в вербальной (речевой) и невербальной форме. <br>
+        Невербальные сигналы проявляются человеком в мимике, жестах, позах, походке и т.д. Они "не осознаются или почти не осознаются.<br>
+        Поэтому в отличие от вербальной невербальная информация в большей степени отражает реальное отношение человека к той или иной проблеме. <br>
+        В данном контексте невербальные сигналы являются для руководителя важнейшим источником достоверной информации, необходимой для выбора правильной стратегии общения с конкретными подчиненными. При помощи невербальных средств общения он может управлять вниманием и состоянием сотрудников.<br>
+        Психологами установлено, что в процессе взаимодействия людей от 60 до 90% коммуникаций осуществляется с помощью невербальных средств выражения. При этом вербальный канал используется главным образом для передачи информации, тогда как невербальные сигналы служат выражением межличностных отношений и в некоторых случаях могут быть использованы вместо словесных сообщений.<br>
+        Количество и качество невербальных сигналов зависит от возраста человека (у детей они читаются легче), пола, национальности (сравните, например, жестикуляцию итальянцев и шведов), типа темперамента, социального статуса, уровня профессионализма (чем выше социально-экономическое положение и профессионализм человека, тем меньше развита у него жестикуляция и беднее телодвижения) и других показателей.<br>
+        Информационный процесс охватывает все подразделения и все стороны деятельности предприятия. Поэтому естественно, что его деятельность в значительной степени зависит от эффективности коммуникационного процесса.<br>
+        Но в процессе коммуникаций информация может быть искажена, неправильно понята или воспринята. Эффективность обмена информацией достигается только в том случае, когда одна сторона передает информацию, а другая — правильно ее воспринимает. <br>
+        Поэтому главной задачей коммуникационного процесса является обеспечение понимания и правильного восприятия передаваемой информации.<br>
+        <br>
+        Выделяют четыре базовых элемента в процессе обмена информацией:<br>
+        •	— отправитель — лицо, которое собирает/генерирует и передает информацию (в системе управления это, как правило, менеджер, который передает информацию исполнителю, направляя его действия на реализацию управленческих решений);")<br>
+        •	— сообщение — сущность информации, передающейся устно или закодированной с помощью символов;<br>
+        •	— канал — средство передачи информации (каналы могут быть формальными и неформальными, горизонтальными и вертикальными и т.д.);<br>
+        •	— получатель — лицо, которому предназначена информация и которое ее воспринимает.<br>
+        <br>
+        Коммуникации подразделяются на две большие группы: между организацией и ее средой и между уровнями управления и подразделениями.<br>
+        <br>
+        К первой группе относятся коммуникации, которые представляют собою информационное взаимодействие с внешней средой: средства массовой информации, потребители, надзор за качеством продукции, органы государственного регулирования, политические группы, комитеты, поставщики и т.п.<br>
+            <br>
+        Ко второй группе относятся коммуникации по вертикали и по горизонтали между подразделениями организации. Возникновение коммуникаций внутри предприятия в виде собраний, обсуждений, телефонных переговоров, отчетов и т.д., как правило, является реакцией на воздействие внешней среды.<br>
+        Рассматривая систему передачи информации можно выделить межличностные и организационные коммуникации. В межличностных коммуникациях важное значение имеют влияние и степень. открытости руководства, степень доверия к подчиненному. Негативное отношение, предвзятость снижают активность и эффективность межличностных коммуникаций.<br>
+        На процесс обмена информацией влияют не только межличностные отношения, но и характер организации коммуникационных процессов на предприятии в целом. Преградой в передаче и правильном восприятии информации могут быть перегрузки коммуникационной сети, нерациональная структура организации, неоптимальная система документирования информации и т.д. Важную роль в эффективности коммуникаций играет налаживание оперативной обратной связи.
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
