--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             11. Менеджеры в организации. Смирнов
         </a></li>
         <li><a href="12.html">
-            12. Практические приемы убеждения и влияния. Ухов
+            12. Практические приемы убеждения и влияния. Ухов 
+            <!-- <img src="images/copy.jpg" alt="1" class="bebr" style="border-radius: 100%; width: 100px; height: 50px;"> -->
         </a></li>
         <li><a href="13.html">
             13. Управление конфликтами. Федорцев
@@ -55,5 +56,8 @@
             15. Управление организационной культурой. Якимов
         </a></li>
     </ul>
+    <!-- <div class="copy">
+        Dimchik tech <img src="images/copy.jpg" alt="1" class="bebr" style="border-radius: 100%; width: 100px; height: 50px;">
+    </div> -->
 </body>
 </html>
