--- a/2.html
+++ b/2.html
@@ -10,7 +10,120 @@
 </head>
 <body>
     <div class="content">
-
+        Эффективность менеджмента организации<br>
+1. Понятие и сущность эффективности менеджмента<br>
+2. Критерии и показатели эффективности менеджмента<br>
+3. Повышение эффективности менеджмента<br>
+<br>
+1. Понятие и сущность эффективности менеджмента<br>
+Эффективность менеджмента - результативность управленческой деятельности.<br>
+Особенностью менеджмента является то, что управленческий труд не создает непосредственно материальных ценностей, а участвует в их создании через организацию труда других лиц, поэтому результаты труда менеджеров воплощаются в результатах труда возглавляемых коллективов и организации в целом.<br>
+Целью деятельности организации является достижение максимальных результатов производственной деятельности при минимальных затратах. Следовательно, эффективность менеджмента организации проявляется в эффективности производства. Эффективность менеджмента показывает, в какой мере менеджеры реализуют цели организации, достигаются ли высокие результаты производства при минимальных затратах.<br>
+Т.о. эффективность менеджмента - это управление деятельностью предприятия с минимальными издержками и максимальными результатами.<br>
+<br>
+При оценке эффективности менеджмента необходимо дать ответы на 2 вопроса:<br>
+1. Какие результаты были достигнуты в процессе управления? (Что сделала управляемая система?)<br>
+2. Как система управления добилась этих результатов? (Ценой каких затрат были получены результаты)<br>
+<br>
+В связи с этим различают внешнюю и внутреннюю эффективность менеджмента.<br>
+<br>
+Внешняя эффективность определяется результатами деятельности:<br>
+<br>
+- степенью достижения целей организации<br>
+- соответствием организации требованиям внешней среды<br>
+- степенью использования возможностей предоставляемых внешней средой<br>
+<br>
+Внутренняя эффективность менеджмента – это экономичность, т.е. способность наилучшим (оптимальным) образом использовать имеющиеся ресурсы для достижения поставленных целей. Данный вид эффективности отражает степень использования компонентов внутренней среды организации, в том числе производственных, финансовых, кадровых и др. возможностей.<br>
+<br>
+Эффективность управления складывается из нескольких элементов:<br>
+<br>
+1. Экономическая эффективность — выражается в количественной форме и измеряется в стоимостных или натуральных измерителях – максимум производства продукции на единицу затраченных средств (средств производства и живого труда).<br>
+<br>
+2. Социальная эффективность управления – повышение удовлетворенности потребностей работников.<br>
+<br>
+Организация – это элемент окружающего мира и помимо реализации экономических целей, она должна нести социальную ответственность перед обществом. Наиболее ярко влияние экономической эффективности деятельности предприятия на социальную среду прослеживается у градообразующих предприятий. Необходимо стремиться к росту не только экономической, но и социальной эффективности менеджмента. В практической деятельности эти два элемента очень тесно взаимосвязаны друг с другом.<br>
+<br>
+3. Социально-экономическая эффективность - имеет комплексную природу сочетания экономической выгоды и социального результата. Так, при улучшении экономической обстановки в организации улучшается и социальная удовлетворенность, и наоборот, при повышении социальной удовлетворенности повышается экономическая эффективность. Например, повышение прибыльности предприятия приводит к увеличению заработной платы и, как следствие, к удовлетворенности работников. Повышение социальной удовлетворенности в свою очередь способствует повышению производительности и улучшению качества труда и, как следствие, увеличивает прибыльность и т.д.<br>
+<br>
+Т.О. менеджмент должен обеспечивать рост социально-экономической эффективности.<br>
+<br>
+2. Критерии и показатели эффективности менеджмента<br>
+Сущность эффективности менеджмента может быть выражена через ее критерий и показатели.<br>
+<br>
+При оценке показателей эффективности менеджмента необходимо исходить из следующих принципов:<br>
+<br>
+Эффективность менеджмента – это один из аспектов эффективности самого производства, поэтому расчет производится на основе общепринятых методик оценки эффективности.<br>
+<br>
+Специфика управленческого труда заключается в том, что как труд производительный, он характеризуется результатами деятельности коллектива (а не только данного работника управления). Соответственно и оценивается по результатам работы всего коллектива организации (или ее подразделения).<br>
+<br>
+В менеджменте, так же как и при оценке инвестиций учитывается временной разрыв между вложениями и отдачей. Наиболее ярко это проявляется в социальной составляющей эффективности менеджмента.<br>
+<br>
+Учитывается влияние отраслевой специфики производства, например, в сельском хозяйстве – это сезонность производства, влияние природно-климатических условий на результаты производства и др. (необходимо анализировать показатели за ряд лет.)<br>
+Сопоставимость сравниваемых показателей, например, сравнивая эффективность менеджмента в различных предприятиях необходимо учитывать их специализацию.<br>
+Анализ эффективности менеджмента включает так же изучение особенностей деятельности субъекта управления:<br>
+управленческий потенциал (материальный и интеллектуальный)- т.е. совокупность всех ресурсов, которыми располагает и которые использует менеджмент организации;<br>
+затраты и расходы на управление;<br>
+характер управленческого труда;<br>
+эффективность действий людей в процессе работы.<br>
+К показателям эффективности менеджмента организации относят:<br>
+<br>
+1) показатели, характеризующие конечные результаты деятельности организации (общие результативные показатели):<br>
+объемы производства и реализации продукции,<br>
+прибыль (П = Выручка от реализации – Себестоимость реализованной продукции)<br>
+рентабельность (Рпрод. = П / Себ. х 100%, Рпредпр = П /Активы х 100%)<br>
+<br>
+показатели эффективности использования отдельных видов ресурсов:<br>
+- фондоотдача,<br>
+- материалоотдача,<br>
+- производительность труда.<br>
+<br>
+2) показатели эффективности собственно управленческой деятельности (субъекта управления):<br>
+<br>
+количественные:<br>
+<br>
+- получено продукции на 1 работника управления<br>
+- прибыль на 1 работника управления<br>
+- прибыль на 1руб. затрат на управление<br>
+- экономия затрат (финансовых и трудовых) на управление.<br>
+<br>
+качественные:<br>
+- повышение научно-технического уровня управления,<br>
+- рост квалификации менеджеров,<br>
+- возрастание уровня обоснованности принимаемых решений,<br>
+- удовлетворенность трудом,<br>
+- завоевание общественного доверия и повышение имиджа организации и др.<br>
+<br>
+Любой показатель эффективности имеет аналитический смысл только в сравнении с некоторой базой. Такой базой может быть значение показателя эффективности за прошлый период или значение показателя у других организаций (у конкурентов, среднее по отрасли и т. п.).<br>
+<br>
+Критерий – это основной признак, исходя из которого выносится суждение об эффективности или неэффективности деятельности.<br>
+Критерием эффективности менеджмента является степень соответствия поведения системы управления конкретной ситуации, это выживаемость организации в быстро меняющейся внутренней и внешней среде.<br>
+3. Повышение эффективности менеджмента<br>
+Повышение эффективности менеджмента характеризуется повышением эффективности управляемого объекта.<br>
+<br>
+Повышение эффективности менеджмента само по себе не является самоцелью, а выступает как результат повышения эффективности организации в целом. Если организация сэкономила ресурсы, повысила объем производства, прибыли менеджеры организации вправе приписать это к своим заслугам и трактовать успехи организации как свои собственные. Но эффективность организации может повыситься за счет факторов, не зависящих от менеджеров, например, улучшение рыночной конъюнктуры, уход с рынка конкурентов. Менеджеры должны наиболее полно использовать возможности предоставляемые внешней средой. В практической деятельности очень трудно общий рост эффективности организации разделить по факторам, зависящим от управления и не зависящим от него.<br>
+<br>
+Для повышения эффективности управления менеджеры должны систематически выполнять следующие действия:<br>
+1. Совершенствовать организационную структуру.<br>
+2. Следить за изменениями во внешней и внутренней среде организации.<br>
+3. Обеспечивать условия для роста квалификации сотрудников.<br>
+4. Вырабатывать стратегию развития, обеспечивающую долгосрочные конкурентные преимущества организации.<br>
+5. Контролировать и анализировать расходы организации, разрабатывать мероприятия по их снижению.<br>
+6. Обеспечивать использование в производстве и управлении достижения НТП, создавать атмосферу позитивного восприятия инноваций.<br>
+7. Разрабатывать эффективную технологию выполнения управленческих процедур.<br>
+8. Создавать благоприятный социально-психологический климат в коллективе.<br>
+9. Следить за настроениями потребителей, изучать их потребности и ожидания.<br>
+10. Формировать совместные ценности в коллективе.<br>
+<br>
+Повышение эффективности менеджмента организации должно осуществляться на основе системного подхода. Одним из вариантов такого подхода является концепция “7-S” (авторы Т. Питерс и Р. Уотерман книга “В поисках эффективного управления”).<br>
+“7-S” – это семь взаимосвязанных переменных, названия которых в английском языке начинаются с буквы “S”:<br>
+стратегия - strategy<br>
+структура - structure<br>
+системы (формальные и неформальные) - systems<br>
+состав персонала - staff<br>
+профессионализм (квалификация) сотрудников -skill<br>
+стиль поведения (мотивация) -style<br>
+совместные (организационные) ценности – shared values<br>
+Совершенствование системы менеджмента должно вестись по этим взаимосвязанным направлениям, необходимо поддерживать баланс и гармонию между ними.
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
