--- a/11.html
+++ b/11.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="content">
-
+        Норм чел но вот тут кринжанул люто
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
