--- a/4.html
+++ b/4.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="content">
-
+        Виноградов козёл
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
