--- a/8.html
+++ b/8.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="content">
-
+        Кудряшов скатинка
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
