--- a/15.html
+++ b/15.html
@@ -10,7 +10,71 @@
 </head>
 <body>
     <div class="content">
-
+        Управление организационной культурой<br>
+<br>
+Процесс управления культурой<br>
+<br>
+Управление применительно к организационной культуре подразумевает формирование,<br>
+поддержку культуры, а также изменения и корректировка по необходимости. <br>
+Изменения<br>
+проводятся вместе с изменениями организационной структуры или рабочего процесса,<br>
+которые считаются необходимыми для достижения целей организации.<br>
+<br>
+Процесс управления включает в себя следующие этапы:<br>
+планирование изменений; организация мероприятий по изменению культуры; мотивация<br>
+работников к изменениям; контроль.<br>
+<br>
+Изменения в культуре входят в состав реализации стратегии организации. На стадии<br>
+изменений возможно появление сопротивлений, возникают конфликты между работниками<br>
+или отделами, вероятна потеря стимулов у работников. Стресс в ситуации возрастает. Если<br>
+изменения проводятся успешно, конфликтность и уровень стресса снижаются до приемлемого<br>
+уровня.<br>
+<br>
+Подходы к управлению организационной культурой<br>
+Их существует несколько. Большинство тесно связаны с моделями изменений в организации в<br>
+целом и применяются к культуре. Изменения культуры всегда сопровождаются<br>
+корректированием структуры и процесса работы в целом. <br>
+Осуществить изменения невозможно<br>
+без этапа подготовки и планирования, а также без вовлечения персонала в процесс изменений.<br>
+<br>
+Если изменения проводятся на уровне отдела, то вовлекается персонал отдела и смежных ему,<br>
+если на уровне всей организации, то вовлекается весь персонал и третьи лица из внешней<br>
+среды. <br>
+Последовательность изменений по Камерону-Куинну включает в себя шесть этапов<br>
+изменений культуры.<br>
+<br>
+1 шаг включает в себя диагноз нынешнего состояния и достижение консенсуса. 2 шаг –<br>
+консенсус достигается в срезе культуры. 3 шаг – анализ будущих результатов. 4 шаг – подбор<br>
+примеров из истории организации. 5 шаг – разработка стратегических действий. 6 шаг – план<br>
+общего развития организации. Последовательность изменений по В.Козлову включает в себя<br>
+четыре этапа.<br>
+<br>
+На 1 этапе проводится анализ нынешнего состояния. Необходимость изменений нужно<br>
+обосновать. <br>
+На 2 этапе происходит отбор нововведений и их разработка. <br>
+На 3 этапе – доработка<br>
+планов и их реализация. <br>
+На 4 этапе – контроль изменений, их корректировка и анализ. 4 этап<br>
+становится основой для последующих изменений, если они необходимы. Рассмотрим этапы<br>
+подробнее.<br>
+Обоснование изменений. Здесь формулируются цели, разрабатывается стратегия, происходит<br>
+моделирование результатов, анализируется структура организации. <br>
+Для упрощения процесса<br>
+используют ряд типичных вопросов, который выглядит так:<br>
+Сортировка нововведений и их разработка. Здесь есть несколько ступеней действий: анализ<br>
+информации и выводы о том, насколько культура соответствует стратегии; отношение<br>
+сотрудников к нововведениям (по результатам исследований с помощью анкетирования,<br>
+опросников и т.д.); определение сложности процесса изменений, примерных сроков<br>
+реализации, расчет затрат; формулировка вывода о целесообразности изменений.<br>
+<br>
+Доработка и внедрение изменений. Здесь также существует несколько этапов действий:<br>
+планирование; реализация на практике; фиксация промежуточных результатов; улучшение<br>
+системы коммуникации и координации между сотрудниками; изменение фокусировки<br>
+внимания менеджеров со старых приоритетов на новые; руководство реагирует на возможные<br>
+кризисы и разрешает их.<br>
+<br>
+Контроль и оценка. Здесь важно не останавливаться на достигнутом, не форсировать<br>
+изменения силой, укрепить полученные результаты и отслеживать их во времени.
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
