--- a/11.html
+++ b/11.html
@@ -10,7 +10,70 @@
 </head>
 <body>
     <div class="content">
-        Норм чел но вот тут кринжанул люто
+        Менеджер – это член организации, который осуществляет руководство людьми, определяет цели работы и принимает эффективные решения. Менеджер в любой организации выполняет 3 группы ролей: - выступает в качестве руководителя организации или какого-либо подразделения; -информационные роли, т.е. менеджер может сам собирать и обобщать информацию о внешней и внутренней среде. Разъясняет стратегию организации, цели организации; - принимает управленческие решения.<br>
+<br>
+Менеджер - это профессиональный управляющий, осуществляет квалифицированное руководство деятельностью. Работа менеджера строиться на комбинации двух фундаментальных составляющих: отношения к производству и отношения к людям.<br>
+<br>
+Роль менеджера в организации – направляющая, формирующая, структурирующая, и в целом организующая. Деятельность менеджера направлена на то, чтобы работники стали не просто арифметической суммой людей со своими проблемами и интересами, но сплоченным коллективом, нацеленным на созидание, на выполнение общественной задачи, чтобы проявились все позитивные эффекты социальной организации, ради которых люди и объединятся в ней, чтобы организация стала действительно организацией.<br>
+<br>
+Руководитель в роли преподавателя должен проявить способность обучить подчиненного необходимым приемам и навыкам труда, этике профессии.<br>
+<br>
+Роль представителя организации  – подписывает от имени организации документы, представляет организацию во внешней среде, в вышестоящих организациях, взаимодействует со средствами массовой информации, принимает посетителей организации, в целом, осуществляет связи с общественностью, принимает совместно с общественными организациями решения по социальным вопросам, участвует в конференциях и иных общественных мероприятиях. Во всех случаях главенствующей для руководителя (менеджера) остается роль организатора. Основным содержанием деятельности менеджера является управление людьми.<br>
+<br>
+Общие задачи менеджеров<br>
+    1. Определение перспективных и текущих целей и задач, планирование.<br>
+    2. Распределение функций, заданий, установление норм, инструктаж подчиненных, создание необходимых условий, мотивация.<br>
+    3. Установление и поддержание коммуникационной связи между подчиненными, между собой и подчиненными.<br>
+    4. Контроль, оценка и анализ деятельности группы в целом и каждого подчиненного в отдельности.<br>
+    5. Изучение подчиненного персонала, повышение его профессионального уровня.<br>
+    6. Проведение собраний совещаний.<br>
+    7. Деловое общение, беседы и переговоры с менеджерами организации, заказчиками, поставщиками.<br>
+    8. Работа с документами.<br>
+    9. Самоменеджмент: установление личных ценностей, планирование, развитие коммуникативных способностей, анализ личных результатов.<br>
+<br>
+Основные задачи менеджера в области руководства<br>
+    • Ставить цели и задачи подчиненным;<br>
+    • Распределять функции.<br>
+<br>
+Основные задачи менеджера в области управления<br>
+    • Заставить объект управления достигнуть цели;<br>
+    • Определять наличие проблем, их критерии и параметры, масштаб допустимых отклонений;<br>
+    • Принимать решение;<br>
+    • Решать проблемы;<br>
+    • Изменять ситуацию в лучшую сторону;<br>
+    • Нести ответственность.<br>
+<br>
+В процессе управления менеджер осуществляет ряд конкретных функций, среди которых: организация и планирование деятельности коллектива и своей собственной работы; распределение заданий и инструктаж подчиненных; контроль за ними; подготовка и чтение отчетов; проверка и оценка результатов работы; ознакомление со всеми новинками в мире бизнеса, техники и технологии, выдвижение и рассмотрение новых идей и предложений; решение вопросов, выходящих за пределы компетенции подчиненных; знакомство с текущей корреспонденцией; ответы на звонки и прием посетителей; проведение собраний и представительство; заполнение форм отчетности; ведение переговоров; повышение квалификации.<br>
+<br>
+Процесс менеджмента по целям состоит из четырех этапов:<br>
+1.Определяется круг полномочий и обязанностей всех руководителей предприятия;<br>
+2.Осуществляется разработка целей менеджмента в рамках установленных обязанностей;<br>
+3.Составляются реальные планы  достижения поставленных целей;<br>
+4.Производится контроль, измерение, оценка работы и полученных каждым руководителем результатов.<br>
+<br>
+Менеджеры не только составляют планы, но и организуют их выполнение путём формирования структур, процессов и методов, с помощью которых организуется совместный и эффективный труд.<br>
+<br>
+Функции:<br>
+1. Планирование – это вид управленческой деятельности, связанной с составлением планов организации и ее составных частей. Планы содержат перечень того, что должно быть сделано, определяют последовательность, ресурсы и время выполнения работ, необходимые для достижения поставленных целей.<br>
+2. Организация – вторая функция  управления, задачей которой является формирование структуры организации, а также обеспечение, всем необходимым  для ее нормальной работы – персоналом, материалами, оборудованием, зданиями, денежными средствами  и др.;<br>
+3. Мотивация – это процесс побуждения себя и других к деятельности, для достижения личных целей или целей организации.<br>
+4. Контроль – это управленческая  деятельность, задачей которой является  количественная и качественная оценка и учет результатов работы организации.<br>
+Ч<br>
+тобы быть хорошим менеджером вам надо быть психологом. <br>
+Быть психологом – значит знать, понимать людей и  отвечать им взаимностью. В этом во многом поможет язык жестов и телодвижений. Изучив этот язык менеджер сможет лучше понимать людей, их действия, чем они обоснованы, сможет добиться взаимного согласия, доверия людей, а это самое главное. Это способствует заключению выгодных сделок и многому другому.<br>
+Уровни менеджмента<br>
+<br>
+Один из наиболее важных, определяющих обязанности менеджера факторов — его положение в организационной иерархии. Руководителей делят на три категории.<br>
+<br>
+На самой вершине пирамиды находятся высшие менеджеры, или менеджеры высшего звена, топ-менеджеры, несущие ответственность за деятельность организации в целом: президенты компаний, председатели советов директоров, главные исполнительные директора и исполнительные вице-президенты. <br>
+<br>
+Менеджеры высшего звена - самая малочисленная категория. Они отвечают за разработку и реализацию стратегии организации, за принятие особо важных для нее решений. К руководителям высшего звена относятся: президент компании, министр, ректор и т.д. Работа руководителя высшего звена является весьма ответственной, так как фронт работы большой, а темп деятельности напряженный. Их работа, в основном, заключается в умственной деятельности. Они постоянно должны принимать управленческие решения.<br>
+<br>
+Менеджеры среднего звена занимают позиции на промежуточных уровнях властной пирамиды и отвечают за деятельность важнейших бизнес-единиц, подразделений и отделов организации. Как правило, «под» средним звеном находятся еще два и более уровней управления. «Золотая середина» организации несет ответственность за реализацию принятых высшим руководством общих стратегий и процедур и ориентирована прежде всего на краткосрочные перспективы. Менеджеры среднего звена контролируют работу руководителей низшего звена и передают обработанную информацию для руководителей высшего звена. К данному звену относятся: заведующие отделом, декан и т.д. На руководителей среднего звена ложится существенно большая доля ответственности.<br>
+<br>
+Менеджеры первой линии (низшего уровня) несут непосредственную ответственность за производство товаров и услуг, т. е. находятся на первом или втором уровнях управления, занимая должности мастеров, линейных менеджеров, офис-менеджеров и т. д. <br>
+<br>
+Менеджеры низшего звена (операционные руководители). Самая многочисленная категория. Они осуществляют контроль за выполнением производственных заданий, за использованием ресурсов (сырья, оборудования, кадров). К младшим начальникам относятся мастер, заведующий лабораторией и т.п. Работа руководителя низшего звена является самой разнообразной, характеризуется частыми переходами от одного вида деятельности к другому. Степень ответственности руководителей низшего звена не очень высока, иногда в работе присутствует значительная доля физического труда.
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
